feat: implement pagination and search, added cors configuration
